style: linting
